opam-version: "2.0"
name:         "rplidar"
bug-reports:  "https://github.com/LaurentMazare/ocaml-rplidar/issues"
homepage:     "https://github.com/LaurentMazare/ocaml-rplidar"
dev-repo:     "git+https://github.com/LaurentMazare/ocaml-rplidar.git"
maintainer:   "Laurent Mazare <lmazare@gmail.com>"
authors:      [ "Laurent Mazare" ]

version: "dev"

build: [["dune" "build" "-p" name "-j" jobs]]
install: []
remove:  []

run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]

depends: [
  "base" {>= "v0.12.0"}
  "dune" {>= "1.3.0" & build}
  "ocaml" {>= "4.07"}
  "ocaml-compiler-libs"
  "stdio"
]

depopts: [
]

conflicts: [
]

available: os = "linux" | os = "macos"

synopsis: "OCaml library for the RPLidar A1M8"

description: """
OCaml library for the RPLidar A1M8
"""
